--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,4 +1,11 @@
 /* some style */
+body {
+    overflow: hidden;
+}
+
+.btn {
+    transition: color .15s ease-in-out, background-color .15s ease-in-out
+}
 
 input.search-and-command {
     width: 100%;
@@ -6,25 +13,50 @@ input.search-and-command {
 
 .word-history {
     display: inline-block;
-    width: 13%;
-    height: 100%;
+    width: 20%;
+    min-width: 75px;
+    /*    height: 100%;*/
+    position: absolute;
+    top: 16px; right: 0; bottom: 16px; left: 0;
 
-    padding-left: 0;
-    list-style: none;
 }
+
+.word-history-list {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    list-style: none;
+
+    
+    overflow-y: scroll;
+}
+
+.word-history-list::-webkit-scrollbar { 
+    display: none;
+}
+
+
 
 .word-history-word {
     padding: 10px;
+    
+    border-bottom: 1px solid #ededed;
+    box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
 
-    border-style: solid;
-    border-color: 
+}
+
+.word-history-word:hover {
+    color: #212529;
+    background-color: #e2e6ea;
 }
 
 .word-definition {
     display: inline-block;
-    width: 80%;
+    width: 77%;
     height: 100%;
 
+    margin-left: 20%;
+
     vertical-align: top;
-    padding-left: 10px;
+    padding: 8px;
 }
