Add selection highlight to the word history

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -50,6 +50,10 @@ input.search-and-command {
     background-color: #e2e6ea;
 }
 
+.word-selected {
+    background-color: #81beff;
+}
+
 .word-definition {
     display: inline-block;
     width: 77%;
