--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,66 +1,62 @@
-/* some style */
 body {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .btn {
-    transition: color .15s ease-in-out, background-color .15s ease-in-out
+  transition: color .15s ease-in-out, background-color .15s ease-in-out;
 }
 
 input.search-and-command {
-    width: 100%;
+  width: 100%;
 }
 
-.word-history {
-    display: inline-block;
-    width: 20%;
-    min-width: 75px;
-    /*    height: 100%;*/
-    position: absolute;
-    top: 16px; right: 0; bottom: 16px; left: 0;
-
+.word-history-container {
+  display: inline-block;
+  width: 20%;
+  min-width: 75px;
+  position: absolute;
+  top: 16px;
+  right: 0;
+  bottom: 16px;
+  left: 0;
 }
 
 .word-history-list {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    list-style: none;
-
-    
-    overflow-y: scroll;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  list-style: none;
+  overflow-y: scroll;
 }
 
-.word-history-list::-webkit-scrollbar { 
-    display: none;
+.word-history-list::-webkit-scrollbar {
+  display: none;
 }
-
-
 
 .word-history-word {
-    padding: 10px;
-    
-    border-bottom: 1px solid #ededed;
-    box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
-
+  padding: 10px;
+  border-bottom: 1px solid #ededed;
+  box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
 }
 
 .word-history-word:hover {
-    color: #212529;
-    background-color: #e2e6ea;
+  color: #212529;
+  background-color: #e2e6ea;
+}
+
+.word-history-word.word-selected:hover {
+  background-color: #4198f6;
 }
 
 .word-selected {
-    background-color: #81beff;
+  background-color: #81beff;
 }
 
 .word-definition {
-    display: inline-block;
-    width: 77%;
-    height: 100%;
-
-    margin-left: 20%;
-
-    vertical-align: top;
-    padding: 8px;
+  display: inline-block;
+  width: 77%;
+  height: 100%;
+  margin-left: 20%;
+  padding: 8px;
+  vertical-align: top;
 }
