Auto stash before merge of "dev" and "origin/dev"
change scroll bar

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -64,6 +64,26 @@ input.search-and-command {
   left: 23%;
 }
 
+.word-definition::-webkit-scrollbar {
+  width: 12px;
+}
+
+.word-definition::-webkit-scrollbar-track {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+.word-definition::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: rgba(0x60, 0x60, 0x60, 0.8);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.word-definition::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(0x60, 0x60, 0x60, 0.4);
+}
+
 .kr-mean {
   font-size: 30px;
   word-break: break-all;
